fix sizing on mobile

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 @media (max-width: 540px) {
   .container {
-    width: 300px;
+    width: 80%;
   }
 }
 
